--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@
 plugins {
     // Apply the groovy plugin to add support for Groovy
     id 'groovy'
+    id 'application'
+    id 'idea'
 }
-
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
