--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.5.4'
 
     // Use the awesome Spock testing and specification framework
-    testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
+    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
+    testImplementation 'junit:junit:4.12'
 }
